# reminder

./: .gitignore  .gitmodules  AddButton.qml  AlarmDelegate.qml  AlarmModel.qml  AlarmPage.qml  CButton.qml  CMakeLists.txt  ChronoList.qml  ChronoPage.qml  MainSwipePage.qml  NewAlarm.qml  README.md  ScrollBox.qml  alarmtime.cpp  chrono.js  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
alarm/: AlarmDelegate.qml  AlarmPage.qml  NewAlarm.qml  alarmproxymodel.cpp  alarmproxymodel.hpp  alarmtime.hpp  sqlalarmmodel.cpp  sqlalarmmodel.hpp
chrono/: ChronoList.qml  ChronoPage.qml
time/: TimePage.qml  timesmodel.cpp  timesmodel.hpp  timesproxymodel.cpp  timesproxymodel.hpp  timezonelistmodel.cpp  timezonelistmodel.hpp  timezoneporxymodel.cpp  timezoneporxymodel.hpp
